DE6893 - Fixed letter spacing for tooltip

--- a/app/shared/components/compass-tooltip/compass-tooltip.component.scss
+++ b/app/shared/components/compass-tooltip/compass-tooltip.component.scss
@@ -44,12 +44,11 @@
     }
 
     h2, h3 {
-      line-height: 1;
       font-family: $roboto;
       font-size: 11px;
       font-weight: bold;
       line-height: 1.45;
-      letter-spacing: 1;
+      letter-spacing: 1px;
       text-align: left;
       color: $gray-1;
       color: var(--cbiGrey74);
@@ -61,6 +60,7 @@
       line-height: 1.5;
       text-align: left;
       text-transform: none;
+      letter-spacing: 0;
       color: $gray-1;
       color: var(--cbiGrey74);
     }
